[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Art/atlases/button_atlas_32.png" type="Texture" id=1]
[ext_resource path="res://Puzzle Elements/Scripts/Button.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 2 )

[node name="Button" type="Area2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="ButtonSpr" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
z_index = -1
texture = SubResource( 3 )

[node name="ButtonCollide" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_button_pressed"]
[connection signal="body_exited" from="." to="." method="_on_button_released"]
[connection signal="timeout" from="Timer" to="." method="send_released_signal"]
